Fix width on mobiles

--- a/css/main.css
+++ b/css/main.css
@@ -57,7 +57,7 @@ ol.nav { list-style: none; margin-left: 0; }
 
 @media handheld, only screen and (max-width: 640px), only screen and (max-device-width: 640px) 
 { 
-	header, section, article, footer { width: 95%; margin: 0 auto; min-width: 320px; }
+	header, section, article, footer, hr { width: 90%; margin: 0 auto; min-width: 320px; }
 	img { max-width: 100%; }
 	.quote blockquote { width: auto; }
 }
